Fixing issue with storage hint
